// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormatFacturXService XMP metadata should add XMP metadata for Factur-X-Basic 1`] = `
"<?xpacket begin="�" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
		<rdf:Description xmlns:pdfaid="http://www.aiim.org/pdfa/ns/id/" rdf:about="">
			<pdfaid:part>3</pdfaid:part>
			<pdfaid:conformance>B</pdfaid:conformance>
		</rdf:Description>
		<rdf:Description xmlns:dc="http://purl.org/dc/elements/1.1/" rdf:about="">
			<dc:format>application/pdf</dc:format>
			<dc:date>
				<rdf:Seq>
					<rdf:li>2025-04-01T12:00:00+02:00</rdf:li>
				</rdf:Seq>
			</dc:date>
			<dc:creator>
				<rdf:Seq>
					<rdf:li>Acme Ltd.</rdf:li>
				</rdf:Seq>
			</dc:creator>
		</rdf:Description>
		<rdf:Description xmlns:pdf="http://ns.adobe.com/pdf/1.3/" rdf:about="">
			<pdf:Producer>gflohr/e-invoice-eu git+https://github.com/gflohr/e-invoice-eu</pdf:Producer>
			<pdf:PDFVersion>1.7</pdf:PDFVersion>
		</rdf:Description>
		<rdf:Description xmlns:xmp="http://ns.adobe.com/xap/1.0/" rdf:about="">
			<xmp:CreatorTool>Acme Ltd.</xmp:CreatorTool>
			<xmp:CreateDate>2025-04-01T12:00:00+02:00</xmp:CreateDate>
			<xmp:ModifyDate>2025-04-01T12:00:00+02:00</xmp:ModifyDate>
			<xmp:MetadataDate>2025-04-01T12:00:00+02:00</xmp:MetadataDate>
		</rdf:Description>
		<rdf:Description xmlns:pdfaExtension="http://www.aiim.org/pdfa/ns/extension/" xmlns:pdfaSchema="http://www.aiim.org/pdfa/ns/schema#" xmlns:pdfaProperty="http://www.aiim.org/pdfa/ns/property#" rdf:about="">
			<pdfaExtension:schemas>
				<rdf:Bag>
					<rdf:li rdf:parseType="Resource">
						<pdfaSchema:schema>Factur-X PDFA Extension Schema</pdfaSchema:schema>
						<pdfaSchema:namespaceURI>urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#</pdfaSchema:namespaceURI>
						<pdfaSchema:prefix>fx</pdfaSchema:prefix>
						<pdfaSchema:property>
							<rdf:Seq>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentFileName</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The name of the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentType</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The type of the hybrid document in capital letters, e.g. INVOICE or ORDER</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>Version</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The actual version of the standard applying to the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>ConformanceLevel</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The conformance level of the embedded XML document</pdfaProperty:description>
								</rdf:li>
							</rdf:Seq>
						</pdfaSchema:property>
					</rdf:li>
				</rdf:Bag>
			</pdfaExtension:schemas>
		</rdf:Description>
		<rdf:Description xmlns:fx="urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#" rdf:about="">
			<fx:DocumentType>INVOICE</fx:DocumentType>
			<fx:DocumentFileName>factur-x.xml</fx:DocumentFileName>
			<fx:Version>1.0</fx:Version>
			<fx:ConformanceLevel>BASIC</fx:ConformanceLevel>
		</rdf:Description>
	</rdf:RDF>
</x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`FormatFacturXService XMP metadata should add XMP metadata for Factur-X-Basic WL 1`] = `
"<?xpacket begin="�" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
		<rdf:Description xmlns:pdfaid="http://www.aiim.org/pdfa/ns/id/" rdf:about="">
			<pdfaid:part>3</pdfaid:part>
			<pdfaid:conformance>B</pdfaid:conformance>
		</rdf:Description>
		<rdf:Description xmlns:dc="http://purl.org/dc/elements/1.1/" rdf:about="">
			<dc:format>application/pdf</dc:format>
			<dc:date>
				<rdf:Seq>
					<rdf:li>2025-04-01T12:00:00+02:00</rdf:li>
				</rdf:Seq>
			</dc:date>
			<dc:creator>
				<rdf:Seq>
					<rdf:li>Acme Ltd.</rdf:li>
				</rdf:Seq>
			</dc:creator>
		</rdf:Description>
		<rdf:Description xmlns:pdf="http://ns.adobe.com/pdf/1.3/" rdf:about="">
			<pdf:Producer>gflohr/e-invoice-eu git+https://github.com/gflohr/e-invoice-eu</pdf:Producer>
			<pdf:PDFVersion>1.7</pdf:PDFVersion>
		</rdf:Description>
		<rdf:Description xmlns:xmp="http://ns.adobe.com/xap/1.0/" rdf:about="">
			<xmp:CreatorTool>Acme Ltd.</xmp:CreatorTool>
			<xmp:CreateDate>2025-04-01T12:00:00+02:00</xmp:CreateDate>
			<xmp:ModifyDate>2025-04-01T12:00:00+02:00</xmp:ModifyDate>
			<xmp:MetadataDate>2025-04-01T12:00:00+02:00</xmp:MetadataDate>
		</rdf:Description>
		<rdf:Description xmlns:pdfaExtension="http://www.aiim.org/pdfa/ns/extension/" xmlns:pdfaSchema="http://www.aiim.org/pdfa/ns/schema#" xmlns:pdfaProperty="http://www.aiim.org/pdfa/ns/property#" rdf:about="">
			<pdfaExtension:schemas>
				<rdf:Bag>
					<rdf:li rdf:parseType="Resource">
						<pdfaSchema:schema>Factur-X PDFA Extension Schema</pdfaSchema:schema>
						<pdfaSchema:namespaceURI>urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#</pdfaSchema:namespaceURI>
						<pdfaSchema:prefix>fx</pdfaSchema:prefix>
						<pdfaSchema:property>
							<rdf:Seq>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentFileName</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The name of the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentType</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The type of the hybrid document in capital letters, e.g. INVOICE or ORDER</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>Version</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The actual version of the standard applying to the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>ConformanceLevel</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The conformance level of the embedded XML document</pdfaProperty:description>
								</rdf:li>
							</rdf:Seq>
						</pdfaSchema:property>
					</rdf:li>
				</rdf:Bag>
			</pdfaExtension:schemas>
		</rdf:Description>
		<rdf:Description xmlns:fx="urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#" rdf:about="">
			<fx:DocumentType>INVOICE</fx:DocumentType>
			<fx:DocumentFileName>factur-x.xml</fx:DocumentFileName>
			<fx:Version>1.0</fx:Version>
			<fx:ConformanceLevel>BASIC WL</fx:ConformanceLevel>
		</rdf:Description>
	</rdf:RDF>
</x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`FormatFacturXService XMP metadata should add XMP metadata for Factur-X-EN16931 1`] = `
"<?xpacket begin="�" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
		<rdf:Description xmlns:pdfaid="http://www.aiim.org/pdfa/ns/id/" rdf:about="">
			<pdfaid:part>3</pdfaid:part>
			<pdfaid:conformance>B</pdfaid:conformance>
		</rdf:Description>
		<rdf:Description xmlns:dc="http://purl.org/dc/elements/1.1/" rdf:about="">
			<dc:format>application/pdf</dc:format>
			<dc:date>
				<rdf:Seq>
					<rdf:li>2025-04-01T12:00:00+02:00</rdf:li>
				</rdf:Seq>
			</dc:date>
			<dc:creator>
				<rdf:Seq>
					<rdf:li>Acme Ltd.</rdf:li>
				</rdf:Seq>
			</dc:creator>
		</rdf:Description>
		<rdf:Description xmlns:pdf="http://ns.adobe.com/pdf/1.3/" rdf:about="">
			<pdf:Producer>gflohr/e-invoice-eu git+https://github.com/gflohr/e-invoice-eu</pdf:Producer>
			<pdf:PDFVersion>1.7</pdf:PDFVersion>
		</rdf:Description>
		<rdf:Description xmlns:xmp="http://ns.adobe.com/xap/1.0/" rdf:about="">
			<xmp:CreatorTool>Acme Ltd.</xmp:CreatorTool>
			<xmp:CreateDate>2025-04-01T12:00:00+02:00</xmp:CreateDate>
			<xmp:ModifyDate>2025-04-01T12:00:00+02:00</xmp:ModifyDate>
			<xmp:MetadataDate>2025-04-01T12:00:00+02:00</xmp:MetadataDate>
		</rdf:Description>
		<rdf:Description xmlns:pdfaExtension="http://www.aiim.org/pdfa/ns/extension/" xmlns:pdfaSchema="http://www.aiim.org/pdfa/ns/schema#" xmlns:pdfaProperty="http://www.aiim.org/pdfa/ns/property#" rdf:about="">
			<pdfaExtension:schemas>
				<rdf:Bag>
					<rdf:li rdf:parseType="Resource">
						<pdfaSchema:schema>Factur-X PDFA Extension Schema</pdfaSchema:schema>
						<pdfaSchema:namespaceURI>urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#</pdfaSchema:namespaceURI>
						<pdfaSchema:prefix>fx</pdfaSchema:prefix>
						<pdfaSchema:property>
							<rdf:Seq>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentFileName</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The name of the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentType</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The type of the hybrid document in capital letters, e.g. INVOICE or ORDER</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>Version</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The actual version of the standard applying to the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>ConformanceLevel</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The conformance level of the embedded XML document</pdfaProperty:description>
								</rdf:li>
							</rdf:Seq>
						</pdfaSchema:property>
					</rdf:li>
				</rdf:Bag>
			</pdfaExtension:schemas>
		</rdf:Description>
		<rdf:Description xmlns:fx="urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#" rdf:about="">
			<fx:DocumentType>INVOICE</fx:DocumentType>
			<fx:DocumentFileName>factur-x.xml</fx:DocumentFileName>
			<fx:Version>1.0</fx:Version>
			<fx:ConformanceLevel>EN 16931</fx:ConformanceLevel>
		</rdf:Description>
	</rdf:RDF>
</x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`FormatFacturXService XMP metadata should add XMP metadata for Factur-X-Extended 1`] = `
"<?xpacket begin="�" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
		<rdf:Description xmlns:pdfaid="http://www.aiim.org/pdfa/ns/id/" rdf:about="">
			<pdfaid:part>3</pdfaid:part>
			<pdfaid:conformance>B</pdfaid:conformance>
		</rdf:Description>
		<rdf:Description xmlns:dc="http://purl.org/dc/elements/1.1/" rdf:about="">
			<dc:format>application/pdf</dc:format>
			<dc:date>
				<rdf:Seq>
					<rdf:li>2025-04-01T12:00:00+02:00</rdf:li>
				</rdf:Seq>
			</dc:date>
			<dc:creator>
				<rdf:Seq>
					<rdf:li>Acme Ltd.</rdf:li>
				</rdf:Seq>
			</dc:creator>
		</rdf:Description>
		<rdf:Description xmlns:pdf="http://ns.adobe.com/pdf/1.3/" rdf:about="">
			<pdf:Producer>gflohr/e-invoice-eu git+https://github.com/gflohr/e-invoice-eu</pdf:Producer>
			<pdf:PDFVersion>1.7</pdf:PDFVersion>
		</rdf:Description>
		<rdf:Description xmlns:xmp="http://ns.adobe.com/xap/1.0/" rdf:about="">
			<xmp:CreatorTool>Acme Ltd.</xmp:CreatorTool>
			<xmp:CreateDate>2025-04-01T12:00:00+02:00</xmp:CreateDate>
			<xmp:ModifyDate>2025-04-01T12:00:00+02:00</xmp:ModifyDate>
			<xmp:MetadataDate>2025-04-01T12:00:00+02:00</xmp:MetadataDate>
		</rdf:Description>
		<rdf:Description xmlns:pdfaExtension="http://www.aiim.org/pdfa/ns/extension/" xmlns:pdfaSchema="http://www.aiim.org/pdfa/ns/schema#" xmlns:pdfaProperty="http://www.aiim.org/pdfa/ns/property#" rdf:about="">
			<pdfaExtension:schemas>
				<rdf:Bag>
					<rdf:li rdf:parseType="Resource">
						<pdfaSchema:schema>Factur-X PDFA Extension Schema</pdfaSchema:schema>
						<pdfaSchema:namespaceURI>urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#</pdfaSchema:namespaceURI>
						<pdfaSchema:prefix>fx</pdfaSchema:prefix>
						<pdfaSchema:property>
							<rdf:Seq>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentFileName</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The name of the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentType</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The type of the hybrid document in capital letters, e.g. INVOICE or ORDER</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>Version</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The actual version of the standard applying to the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>ConformanceLevel</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The conformance level of the embedded XML document</pdfaProperty:description>
								</rdf:li>
							</rdf:Seq>
						</pdfaSchema:property>
					</rdf:li>
				</rdf:Bag>
			</pdfaExtension:schemas>
		</rdf:Description>
		<rdf:Description xmlns:fx="urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#" rdf:about="">
			<fx:DocumentType>INVOICE</fx:DocumentType>
			<fx:DocumentFileName>factur-x.xml</fx:DocumentFileName>
			<fx:Version>1.0</fx:Version>
			<fx:ConformanceLevel>EXTENDED</fx:ConformanceLevel>
		</rdf:Description>
	</rdf:RDF>
</x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`FormatFacturXService XMP metadata should add XMP metadata for Factur-X-Minimum 1`] = `
"<?xpacket begin="�" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
		<rdf:Description xmlns:pdfaid="http://www.aiim.org/pdfa/ns/id/" rdf:about="">
			<pdfaid:part>3</pdfaid:part>
			<pdfaid:conformance>B</pdfaid:conformance>
		</rdf:Description>
		<rdf:Description xmlns:dc="http://purl.org/dc/elements/1.1/" rdf:about="">
			<dc:format>application/pdf</dc:format>
			<dc:date>
				<rdf:Seq>
					<rdf:li>2025-04-01T12:00:00+02:00</rdf:li>
				</rdf:Seq>
			</dc:date>
			<dc:creator>
				<rdf:Seq>
					<rdf:li>Acme Ltd.</rdf:li>
				</rdf:Seq>
			</dc:creator>
		</rdf:Description>
		<rdf:Description xmlns:pdf="http://ns.adobe.com/pdf/1.3/" rdf:about="">
			<pdf:Producer>gflohr/e-invoice-eu git+https://github.com/gflohr/e-invoice-eu</pdf:Producer>
			<pdf:PDFVersion>1.7</pdf:PDFVersion>
		</rdf:Description>
		<rdf:Description xmlns:xmp="http://ns.adobe.com/xap/1.0/" rdf:about="">
			<xmp:CreatorTool>Acme Ltd.</xmp:CreatorTool>
			<xmp:CreateDate>2025-04-01T12:00:00+02:00</xmp:CreateDate>
			<xmp:ModifyDate>2025-04-01T12:00:00+02:00</xmp:ModifyDate>
			<xmp:MetadataDate>2025-04-01T12:00:00+02:00</xmp:MetadataDate>
		</rdf:Description>
		<rdf:Description xmlns:pdfaExtension="http://www.aiim.org/pdfa/ns/extension/" xmlns:pdfaSchema="http://www.aiim.org/pdfa/ns/schema#" xmlns:pdfaProperty="http://www.aiim.org/pdfa/ns/property#" rdf:about="">
			<pdfaExtension:schemas>
				<rdf:Bag>
					<rdf:li rdf:parseType="Resource">
						<pdfaSchema:schema>Factur-X PDFA Extension Schema</pdfaSchema:schema>
						<pdfaSchema:namespaceURI>urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#</pdfaSchema:namespaceURI>
						<pdfaSchema:prefix>fx</pdfaSchema:prefix>
						<pdfaSchema:property>
							<rdf:Seq>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentFileName</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The name of the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentType</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The type of the hybrid document in capital letters, e.g. INVOICE or ORDER</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>Version</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The actual version of the standard applying to the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>ConformanceLevel</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The conformance level of the embedded XML document</pdfaProperty:description>
								</rdf:li>
							</rdf:Seq>
						</pdfaSchema:property>
					</rdf:li>
				</rdf:Bag>
			</pdfaExtension:schemas>
		</rdf:Description>
		<rdf:Description xmlns:fx="urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#" rdf:about="">
			<fx:DocumentType>INVOICE</fx:DocumentType>
			<fx:DocumentFileName>factur-x.xml</fx:DocumentFileName>
			<fx:Version>1.0</fx:Version>
			<fx:ConformanceLevel>MINIMUM</fx:ConformanceLevel>
		</rdf:Description>
	</rdf:RDF>
</x:xmpmeta>
<?xpacket end="w"?>"
`;

exports[`FormatFacturXService XMP metadata should add XMP metadata for Factur-X-XRechnung 1`] = `
"<?xpacket begin="�" id="W5M0MpCehiHzreSzNTczkc9d"?>
<x:xmpmeta xmlns:x="adobe:ns:meta/">
	<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#">
		<rdf:Description xmlns:pdfaid="http://www.aiim.org/pdfa/ns/id/" rdf:about="">
			<pdfaid:part>3</pdfaid:part>
			<pdfaid:conformance>B</pdfaid:conformance>
		</rdf:Description>
		<rdf:Description xmlns:dc="http://purl.org/dc/elements/1.1/" rdf:about="">
			<dc:format>application/pdf</dc:format>
			<dc:date>
				<rdf:Seq>
					<rdf:li>2025-04-01T12:00:00+02:00</rdf:li>
				</rdf:Seq>
			</dc:date>
			<dc:creator>
				<rdf:Seq>
					<rdf:li>Acme Ltd.</rdf:li>
				</rdf:Seq>
			</dc:creator>
		</rdf:Description>
		<rdf:Description xmlns:pdf="http://ns.adobe.com/pdf/1.3/" rdf:about="">
			<pdf:Producer>gflohr/e-invoice-eu git+https://github.com/gflohr/e-invoice-eu</pdf:Producer>
			<pdf:PDFVersion>1.7</pdf:PDFVersion>
		</rdf:Description>
		<rdf:Description xmlns:xmp="http://ns.adobe.com/xap/1.0/" rdf:about="">
			<xmp:CreatorTool>Acme Ltd.</xmp:CreatorTool>
			<xmp:CreateDate>2025-04-01T12:00:00+02:00</xmp:CreateDate>
			<xmp:ModifyDate>2025-04-01T12:00:00+02:00</xmp:ModifyDate>
			<xmp:MetadataDate>2025-04-01T12:00:00+02:00</xmp:MetadataDate>
		</rdf:Description>
		<rdf:Description xmlns:pdfaExtension="http://www.aiim.org/pdfa/ns/extension/" xmlns:pdfaSchema="http://www.aiim.org/pdfa/ns/schema#" xmlns:pdfaProperty="http://www.aiim.org/pdfa/ns/property#" rdf:about="">
			<pdfaExtension:schemas>
				<rdf:Bag>
					<rdf:li rdf:parseType="Resource">
						<pdfaSchema:schema>Factur-X PDFA Extension Schema</pdfaSchema:schema>
						<pdfaSchema:namespaceURI>urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#</pdfaSchema:namespaceURI>
						<pdfaSchema:prefix>fx</pdfaSchema:prefix>
						<pdfaSchema:property>
							<rdf:Seq>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentFileName</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The name of the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>DocumentType</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The type of the hybrid document in capital letters, e.g. INVOICE or ORDER</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>Version</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The actual version of the standard applying to the embedded XML document</pdfaProperty:description>
								</rdf:li>
								<rdf:li rdf:parseType="Resource">
									<pdfaProperty:name>ConformanceLevel</pdfaProperty:name>
									<pdfaProperty:valueType>Text</pdfaProperty:valueType>
									<pdfaProperty:category>external</pdfaProperty:category>
									<pdfaProperty:description>The conformance level of the embedded XML document</pdfaProperty:description>
								</rdf:li>
							</rdf:Seq>
						</pdfaSchema:property>
					</rdf:li>
				</rdf:Bag>
			</pdfaExtension:schemas>
		</rdf:Description>
		<rdf:Description xmlns:fx="urn:factur-x:pdfa:CrossIndustryDocument:invoice:1p0#" rdf:about="">
			<fx:DocumentType>INVOICE</fx:DocumentType>
			<fx:DocumentFileName>xrechnung.xml</fx:DocumentFileName>
			<fx:Version>3.0</fx:Version>
			<fx:ConformanceLevel>XRECHNUNG</fx:ConformanceLevel>
		</rdf:Description>
	</rdf:RDF>
</x:xmpmeta>
<?xpacket end="w"?>"
`;
